# difflib

./: .gitignore  CMakeLists.txt  README  README.md
src/: difflib.h
test/: CMakeLists.txt  difflib_string.cc  gendata.sh  gendata2.sh  main.cc  perf01.py  perf_01.cpp  perf_01_gendata.sh  simple_match.cpp  simple_match.py
